Only sign on deploy

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- GPG signing (only on deploy) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -93,7 +95,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
